# aed-schedules

./: .gitignore  1  AED2324_PRJ1_G23  CMakeCache.txt  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Readme.md  cmake_install.cmake  main.cpp  º
.github/workflows/: c-cpp.yml
docs/: Doxyfile  docs.md
docs/output/html/: index.html  menudata.js
schedule/: students_classes.csv
src/: AppCpu.cpp  AppCpu.h  CSVClasses.cpp  CSVClasses.hpp  CSVClassesPerUC.cpp  CSVClassesPerUC.hpp  CSVStudentsClasses.cpp  CSVStudentsClasses.hpp  ClassSchedule.cpp  ClassSchedule.hpp  ClassesPerUC.cpp  ClassesPerUC.hpp  Data.cpp  Data.hpp  Functions.hpp  Lesson.cpp  Lesson.hpp  Makefile  Parser.cpp  Parser.h  Process.cpp  Process.hpp  Runtime.cpp  Runtime.hpp  Student.cpp  Student.hpp  StudentsClasses.cpp  StudentsClasses.hpp  Utils.cpp  Utils.hpp  app.cpp  app.h  appClasses.cpp  appClasses.hpp  appClassesPerUC.cpp  appClassesPerUC.hpp  appClassesPerUc.cpp  appClassesPerUc.hpp  appStudentsClasses.cpp  appStudentsClasses.hpp  (+10 more)
src/parser-csv/: Parser.cpp  Parser.h
